# HOSA

./: .coveragerc  .gitignore  AUTHORS  Algorithm Proposal.pptx  CNN.py  CNNClassification.py  ChangeLog  LICENSE  Methodologies for Automatic Cyclic Alternating Pattern Detection Based on Different Neural Networks.docx  OptimizeCNN.py  OptimizeLSTM.py  README.md  README.rst  aux.py  codemeta.json  create_overlapping.py  hosa.py  main.py  optimize_cnn.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  test_cnn.py  unit_tests.py  ~$thodologies for Automatic Cyclic Alternating Pattern Detection Based on Different Neural Networks.docx
.circleci/: config.yml
.github/: contributing.md
.github/workflows/: draft-pdf.yml  python-package.yml
Callbacks/: EarlyStoppingAtMinLoss.py
OLD/: OptimizeCNN.py  OptimizeLSTM.py
benchmark/: ga.py  grid.py  hosa.py  hosa_b.py  hosa_final.py  utils.py
datasets/: occupancy.txt  pollution.csv
docs/source/: api.rst  conf.py  index.rst  installation.rst  ref.rst
hosa/: aux.py
hosa/Callbacks/: __init__.py  early_stopping_min_loss.py
hosa/Helpers/: __init__.py  functions.py
hosa/Optimization/: __init__.py  defaults.py  hosa.py
hosa/callbacks/: __init__.py  early_stopping.py
hosa/helpers/: __init__.py  functions.py  log.py
hosa/optimization/: hosa.py
paper/: paper.md
project/: Algorithm Proposal.pptx  Methodologies for Automatic Cyclic Alternating Pattern Detection Based on Different Neural Networks.docx  aux.py  defaults.py  hosa.py  main.py  optimize_cnn.py  ~$thodologies for Automatic Cyclic Alternating Pattern Detection Based on Different Neural Networks.docx
project/CNN/: __init__.py  (+1 more)
tests/: .coveragerc  unit_tests.py
(+104 files in other folders)
