[metadata]
name = HOSA
author = Freitas, D. et al.
author-email = diogo.nt.freitas@gmail.com
summary = Heuristic Oriented Search Algorithm
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
home-page = http://hosa.readthedocs.io
project_urls =
    Bug Tracker = https://bugs.launchpad.net/pbr/
    Documentation = http://hosa.readthedocs.io
    Source Code = https://opendev.org/openstack/pbr
license = MIT License
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils
